[package]
name = "coubot"
version = "1.1.0"
authors = ["Alex Hincu <teeseal@sorta.moe>"]
edition = "2018"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "http", "model", "rustls_backend"]
version = "0.9.0-rc.0"

[dependencies]
tokio = { version = "0.2", features = ["full", "macros", "fs"] }
log = "0.4"
pretty_env_logger = "0.4.0"
regex = "1.2.1"
lazy_static = "1.4.0"
url = "2.1.0"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
tempfile = "3.1.0"
bytes = "0.5.6"
